--- a/website/index.html
+++ b/website/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Rift - Your intelligent productivity bridge" />
     <meta name="author" content="Rift" />
 
+    <link rel="icon" href="/favicon.ico" />
     <meta property="og:title" content="Rift" />
     <meta property="og:description" content="Your intelligent productivity bridge" />
     <meta property="og:type" content="website" />
